# octant-v2-core

./: .env.template  .gitignore  .gitmodules  .lintstagedrc.json  .prettierrc  .release-it.json  .solhint.json  .solhintignore  AUDIT.MD  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  OCTANT_NATSPEC_COOKBOOK.md  README.md  YieldSkimmingTokenizedStrategyAudit-Aug-26.md  flake.nix  foundry.toml  gasreport.txt  kontrol.toml  lcov.info  output.json  package-lock.json  package.json  remappings.txt  slither.config.json  yield-skimming-changes.md  yield-skimming-scenarios.md
.github/: NATSPEC_CHECKLIST.md
.husky/: pre-commit
ci/: update_gcp_secret.sh
demos/glm-converter/: README.md  flashbots-searcher.py  grapher.py  pyproject.toml  searcher.py  start-searcher-demo.sh  subscription-searcher.py
docker/: Dockerfile
docs/: book.toml  github_actions_variables_and_secrets.md  staging_environments.md
poc/: Converter.sol  UniswapLiquidityHelperDeployer.s.sol
script/: 01_DeployTrader.s.sol  02_ConfigureTrader.s.sol  03_TraderStatus.s.sol  04_TraderRun.s.sol  AddTransactionToSafe.s.sol  CreateSafeWithDragonVaultModule.s.sol  CreateSafeWithOctantRewardsSafeModule.s.sol  CreateSafeWithVaultModule.s.sol  DeployModuleAndEnableOnSafe.s.sol  DeployModuleFactoryToken.s.sol  DeployOctantModuleAndEnableOnSafe.s.sol  DeployOctantModuleFactory.s.sol  GetBytesData.s.sol  UniswapLiquidityHelperDeployer.s.sol
scripts/: combine-proxy-abis.sh
src/: constants.sol  errors.sol
test/: Base.t.sol  BaseImpactStrategy.t.sol  BaseStrategy.t.sol  DragonRouter.t.sol  Setup.t.sol  (+4 more)
(+827 files in other folders)
